added number of cpu option

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = Metal_Dock
-version = 0.1.0
+name = MetalDock
+version = 1.0.0
 
 [options]
 zip_safe = True
@@ -8,8 +8,15 @@ include_package_data = True
 packages = find:
 package_dir=
     =src
-install_requires = 
-
+install_requires =
+    ase
+    matplotlib
+    mgltools
+    openbabel
+    pdb2pqr
+    plams
+    propka
+    pygad
 
 [options.packages.find]
 where=src
