Improved test_GA

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,12 +11,12 @@ package_dir=
 install_requires =
     ase
     matplotlib
-    mgltools
     openbabel
     pdb2pqr
     plams
     propka
     pygad
+    rmsd
 
 [options.packages.find]
 where=src
