--- a/MetalDocs/mkdocs.yml
+++ b/MetalDocs/mkdocs.yml
@@ -1,1 +1,6 @@
-site_name: My Docs
+site_name: MetalDock
+site_url: https://metaldock_docs.com/ 
+nav:
+  - Home: index.md
+  - About: about.md
+theme: readthedocs
