--- a/setup.cfg
+++ b/setup.cfg
@@ -9,14 +9,14 @@ packages = find:
 package_dir=
     =src
 install_requires =
+    python >= 3.8
+    mgltools
+    rdkit 
+    pdb2pqr    
+    networkx
+    numpy 
     ase
-    matplotlib
-    openbabel
-    pdb2pqr
     plams
-    propka
-    pygad
-    rmsd
 
 [options.packages.find]
 where=src
