--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -2,8 +2,9 @@ site_name: My Docs
 site_url: https://metal_dock_docs.com/
 
 nav: 
-  - Home: index.md
+  - Home: index.md  
   - Installation: installation.md
-  - Running: running.md
- 
+  - Run MetalDock: run.md
+  - Input: input.md
+
 theme: readthedocs
