--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = MetalDock
-version = 1.0.0
+version = 1.0.1
 
 [options]
 zip_safe = True
@@ -9,7 +9,7 @@ packages = find:
 package_dir=
     =src
 install_requires =
-    python >= 3.8
+    python >= 3.8.0
     mgltools
     rdkit 
     pdb2pqr    
@@ -24,3 +24,7 @@ where=src
 [options.package_data]
 example = path
 * = README.md
+
+[entry_points]
+console_scripts =
+    MetalDock = metal_dock:main
