--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = MetalDock
-version = 1.0.2
+version = 1.0.0
 
 [options]
 zip_safe = True
@@ -8,15 +8,6 @@ include_package_data = True
 packages = find:
 package_dir=
     =src
-install_requires =
-    python >= 3.8.0
-    mgltools
-    rdkit 
-    pdb2pqr    
-    networkx
-    numpy 
-    ase
-    plams
 
 [options.packages.find]
 where=src
@@ -27,4 +18,4 @@ example = path
 
 [entry_points]
 console_scripts =
-    MetalDock = metal_dock:main
+    metaldock = metal_dock.main:main
