--- a/input_examples/adf_input.ini
+++ b/input_examples/adf_input.ini
@@ -25,6 +25,9 @@ vacant_site = False
 
 [DOCKING]
 ga_dock = True
+dock_x = 10
+dock_y = 10
+dock_z = 10 
 box_size = 20
 random_pos = True
 num_poses = 10
