--- a/input_examples/orca_input.ini
+++ b/input_examples/orca_input.ini
@@ -22,6 +22,9 @@ vacant_site = True
 
 [DOCKING]
 ga_dock = True
+dock_x = 10
+dock_y = 10
+dock_z = 10 
 box_size = 20
 random_pos = True
 num_poses = 10
