Refactored whole code base to be more modular and easier to debug

--- a/examples/example_runs/no_vacancy_coordination_sphere/ADF/input.ini
+++ b/examples/example_runs/no_vacancy_coordination_sphere/ADF/input.ini
@@ -16,7 +16,7 @@ functional = B3LYP
 dispersion = GRIMME3 BJDAMP
 
 [METAL_COMPLEX]
-geom_opt =True 
+geom_opt = False 
 xyz_file = 2bzh_B_HB1.xyz
 charge = 0
 spin = 0
@@ -26,5 +26,5 @@ vacant_site = False
 rmsd = True
 box_size = 20
 random_pos = True
-num_poses = 10
+num_poses = 2
 
