--- a/examples/example_runs/no_vacancy_coordination_sphere/GAUSSIAN/input.ini
+++ b/examples/example_runs/no_vacancy_coordination_sphere/GAUSSIAN/input.ini
@@ -17,7 +17,7 @@ functional = B3LYP
 dispersion = GD3BJ
 
 [METAL_COMPLEX]
-geom_opt =True 
+geom_opt =False 
 xyz_file = 2bzh_B_HB1.xyz
 charge = 0
 spin = 0
