--- a/examples/example_runs/vacancy_coordination_sphere/ADF/input.ini
+++ b/examples/example_runs/vacancy_coordination_sphere/ADF/input.ini
@@ -16,7 +16,7 @@ functional = B3LYP
 dispersion = GRIMME3 BJDAMP
 
 [METAL_COMPLEX]
-geom_opt = False
+geom_opt = True 
 xyz_file = 1jzi_D_REP.xyz
 charge = 1
 spin = 0
@@ -31,7 +31,7 @@ rmsd = True
 box_size = 20
 random_pos = True
 
-num_poses = 10
+num_poses = 3
 ga_dock = True
 ga_dock_pop_size = 200
 ga_dock_num_evals = 2500000
