--- a/examples/example_runs/vacancy_coordination_sphere/GAUSSIAN/input.ini
+++ b/examples/example_runs/vacancy_coordination_sphere/GAUSSIAN/input.ini
@@ -17,7 +17,7 @@ functional = B3LYP
 dispersion = GD3BJ
 
 [METAL_COMPLEX]
-geom_opt = False
+geom_opt = True 
 xyz_file = 1jzi_D_REP.xyz
 charge = 1
 spin = 0
