updated the monte carlo example

--- a/examples/example_runs/monte_carlo/input.ini
+++ b/examples/example_runs/monte_carlo/input.ini
@@ -5,14 +5,14 @@ ncpu = 16
 
 [MC]
 mc_steps = 100
-parameter_file = metal_dock.dat
+parameter_file = metal_dock_optimize.dat
 
 [DOCKING]
 rmsd = True
 box_size = 20
 random_pos = True
 
-num_poses = 1 
+num_poses = 10 
 ga_dock = True
 ga_dock_pop_size = 200
 ga_dock_num_evals = 2500000
